--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,39 @@
-**/.DStore
+# OS
 **/.DS_Store
-**/.vscode
-**/object
-**/*.o
-**/*.a
+
+# compiled output
+**/dist
 **/node_modules
+
+# Logs
+**/logs
+**/.log
+**/npm-debug.log*
+**/pnpm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/lerna-debug.log*
+
+# Tests
+**/coverage
+**/.nyc_output
+
+# IDEs and editors
+**/.idea
+**/.project
+**/.classpath
+**/.c9/
+**/.launch
+**/.settings/
+**/.sublime-workspace
+
+# IDE - VSCode
+**/.vscode
+**/.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Other
 **/.env
