--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 # Tests
 **/coverage
 **/.nyc_output
+**/coverage
 
 # IDEs and editors
 **/.idea
@@ -37,3 +38,21 @@
 
 # Other
 **/.env
+
+# dependencies
+**/node_modules
+**/.pnp
+**.pnp.js
+
+# production
+**/build
+
+# misc
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
