--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,8 @@ FROM		node:21.6.0
 WORKDIR		/usr/src/app
 COPY		. /usr/src/app
 
+RUN			npm install
+
 EXPOSE		3000
 
-CMD			["tail", "-f", "/dev/null"]
+CMD			["npm", "start"]
