--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,33 @@ services:
         networks:
             - transcendence_network
         restart: unless-stopped
+    
+    db:
+        container_name: postgres
+        image: postgres
+        restart: always
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        volumes:
+            - ${PWD}/pgdata:/var/lib/postgresql/data
+        ports:
+            - "5432:5432"
+        networks:
+            - transcendence_network
+    
+    pgadmin:
+        container_name: pgadmin
+        image: dpage/pgadmin4
+        restart: always
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+        ports:
+            - "5050:80"
+        networks:
+            - transcendence_network
 
 networks:
     transcendence_network:
