--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,6 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 
-# Other
-**/.env
-
 # dependencies
 **/node_modules
 **/.pnp
@@ -48,6 +45,7 @@
 **/build
 
 # misc
+**/.env.private
 **/.env.local
 **/.env.development.local
 **/.env.test.local
