--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     backend:
         container_name: backend
         build: ./backend
+        env_file:
+            - .env
         ports:
-            - "5001:5001"
+            - "${BACKEND_PORT}:${BACKEND_PORT}"
         networks:
             - transcendence_network
         restart: unless-stopped
@@ -13,8 +15,10 @@ services:
     frontend:
         container_name: frontend
         build: ./frontend
+        env_file:
+            - .env
         ports:
-            - "3000:3000"
+            - "${FRONTEND_PORT}:${FRONTEND_PORT}"
         networks:
             - transcendence_network
         restart: unless-stopped
