--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@nestjs/typeorm": "^10.0.1",
+    "pg": "^8.11.3",
+    "typeorm": "^0.3.19"
   },
   "scripts": {
     "start": "react-scripts start",
