--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         build: ./backend
         ports:
             - "5000:5000"
+        depends_on:
+            - db
         networks:
             - transcendence_network
         restart: unless-stopped
@@ -15,9 +17,12 @@ services:
         build: ./frontend
         ports:
             - "3000:3000"
+        depends_on:
+            - db
         networks:
             - transcendence_network
         restart: unless-stopped
+
     
     db:
         container_name: postgres
@@ -28,7 +33,7 @@ services:
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_DB: ${POSTGRES_DB}
         volumes:
-            - ${PWD}/pgdata:/var/lib/postgresql/data
+            - pgdata:/var/lib/postgresql/data
         ports:
             - "5432:5432"
         networks:
@@ -43,8 +48,13 @@ services:
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
         ports:
             - "5050:80"
+        depends_on:
+            - db
         networks:
             - transcendence_network
+
+volumes:
+    pgdata:
 
 networks:
     transcendence_network:
