--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,29 @@
 version: '3'
 
 services:
+    db:
+        image: postgres:14
+        container_name: db
+        restart: always
+        ports:
+            - "5432:5432"
+        volumes:
+            - pgdata:/var/lib/postgresql/data
+        env_file:
+            - ./backend/.env
+        command: postgres -c listen_addresses=*
+        networks:
+            - transcendence_network
+
     backend:
         container_name: backend
         build:
             context: ./backend
             dockerfile: Dockerfile
+        env_file:
+            - ./backend/.env
         ports:
             - "5001:5001"
-        env_file:
-            - .env
         depends_on:
             - db
         networks:
@@ -21,6 +35,8 @@ services:
         build:
             context: ./frontend
             dockerfile: Dockerfile
+        env_file:
+            - ./frontend/.env
         ports:
             - "3000:3000"
         depends_on:
@@ -28,19 +44,23 @@ services:
         networks:
             - transcendence_network
         restart: unless-stopped
-    
-    db:
-        image: postgres:14
-        container_name: db
-        restart: always
-        ports:
-            - "5432:5432"
-        volumes:
-            - pgdata:/var/lib/postgresql/data
-        env_file:
-            - .env
-        networks:
-            - transcendence_network
+
+    # prisma-studio:
+    #   build:
+    #     context: ./
+    #     dockerfile: ./docker/prisma-studio/dockerfile
+    #   container_name: prisma-studio
+    #   depends_on:
+    #     - backend
+    #   environment:
+    #     DATABASE_URL: "postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@dev-db:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
+    #   volumes:
+    #     - ./server:/server
+    #   ports:
+    #     - 5555:5555
+    #   networks:
+    #     - transcendence_network
+    #   restart: always
 
 volumes:
     pgdata:
