--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nestjs/typeorm": "^10.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.74",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.1",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
+    "typeorm": "^0.3.19",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@nestjs/typeorm": "^10.0.1",
-    "pg": "^8.11.3",
-    "typeorm": "^0.3.19"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
