Lint update to match airbnb rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "eslint.workingDirectories": [
         "../backend",
         "../backend"
+    ],
+    "cSpell.words": [
+        "linebreak",
+        "uuidv"
     ]
 }
