--- a/backend/package.json
+++ b/backend/package.json
@@ -45,8 +45,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "nestjs-prisma": "^0.22.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -60,6 +62,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.1.65",
     "@swc/core": "^1.3.105",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
