--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ POSTGRES_USER=postgres
 POSTGRES_DB=postgres
 
 # # # See https://www.prisma.io/docs/concepts/database-connectors/postgresql
-# # # Host value is the default container name for postgres - @nest-postgres:5432
+# Host value is the default container name for postgres - @nest-postgres:5432
 # # # change it when changing the container name
 # DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
 # # # To have acccess to the database container from your local machine 
