--- a/backend/package.json
+++ b/backend/package.json
@@ -32,8 +32,6 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
-    "dotenv": "^16.4.1",
-    "@nestjs/config": "^3.1.1",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -49,9 +47,11 @@
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "nestjs-prisma": "^0.22.0",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
