--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,53 +14,53 @@ services:
         networks:
             - transcendence_network
 
-    backend:
-        container_name: backend
-        build:
-            context: ./backend
-            dockerfile: Dockerfile
-        env_file:
-            - ./backend/.env
-        ports:
-            - "5001:5001"
-        depends_on:
-            - db
-            - frontend
-        networks:
-            - transcendence_network
-        restart: unless-stopped
+    # backend:
+    #     container_name: backend
+    #     build:
+    #         context: ./backend
+    #         dockerfile: Dockerfile
+    #     env_file:
+    #         - ./backend/.env
+    #     ports:
+    #         - "5001:5001"
+    #     depends_on:
+    #         - db
+    #         - frontend
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
 
-    frontend:
-        container_name: frontend
-        build:
-            context: ./frontend
-            dockerfile: Dockerfile
-        env_file:
-            - ./frontend/.env
-        ports:
-            - "3000:3000"
-        depends_on:
-            - db
-        networks:
-            - transcendence_network
-        restart: unless-stopped
+    # frontend:
+    #     container_name: frontend
+    #     build:
+    #         context: ./frontend
+    #         dockerfile: Dockerfile
+    #     env_file:
+    #         - ./frontend/.env
+    #     ports:
+    #         - "3000:3000"
+    #     depends_on:
+    #         - db
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
     
-    prisma-studio:
-        container_name: prisma-studio
-        build:
-            context: ./backend
-            dockerfile: Dockerfile.studio
-        env_file:
-            - ./backend/.env
-        ports:
-            - "5555:5555"
-        depends_on:
-            - db
-            - backend
-            - frontend
-        networks:
-            - transcendence_network
-        restart: unless-stopped
+    # prisma-studio:
+    #     container_name: prisma-studio
+    #     build:
+    #         context: ./backend
+    #         dockerfile: Dockerfile.studio
+    #     env_file:
+    #         - ./backend/.env
+    #     ports:
+    #         - "5555:5555"
+    #     depends_on:
+    #         - db
+    #         - backend
+    #         - frontend
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
 
 volumes:
     pgdata:
