--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.15.7",
     "axios": "^1.5.1",
+    "classnames": "^2.5.1",
     "cookie": "^0.6.0",
     "history": "^5.3.0",
     "react": "^18.2.0",
