--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.15.7",
+    "@types/socket.io-client": "^3.0.0",
     "antd": "^5.14.2",
     "axios": "^1.5.1",
     "classnames": "^2.5.1",
