--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.5.1",
     "cookie": "^0.6.0",
     "history": "^5.3.0",
+    "iconoir-react": "^7.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
