--- a/backend/package.json
+++ b/backend/package.json
@@ -53,8 +53,10 @@
     "express": "^4.18.2",
     "history": "^5.3.0",
     "nestjs-prisma": "^0.22.0",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
