--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "@prisma/client": "^5.9.0",
     "argon2": "^0.31.2",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie": "^0.6.0",
