--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "history": "^5.3.0",
     "iconoir-react": "^7.5.0",
     "modern-normalize": "^2.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
