--- a/backend/Dockerfile.studio
+++ b/backend/Dockerfile.studio
@@ -1,9 +1,9 @@
-FROM node:21
+FROM	node:21.6.0
 
-WORKDIR /app
+WORKDIR	/usr/src/app
 
-COPY prisma ./prisma/
+COPY	prisma ./prisma/
 
-RUN npm install prisma --save-dev 
+RUN		npm install prisma --save-dev 
 
-CMD ["npx", "prisma", "studio"]
+CMD		["npx", "prisma", "studio"]
