--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
         image: postgres:14
         container_name: db
         env_file:
+            - .env
             - ./backend/.env
         ports:
-            - "5432:5432"
+            - "${DATABASE_PORT}:${DATABASE_PORT}"
         networks:
             - transcendence_network
         restart: always
@@ -18,9 +19,10 @@ services:
         container_name: frontend
         build: ./frontend
         env_file:
+            - .env
             - ./frontend/.env
         ports:
-            - "3000:3000"
+            - "${FRONTEND_PORT}:${FRONTEND_PORT}"
         depends_on:
             - db
         networks:
@@ -31,9 +33,10 @@ services:
         container_name: backend
         build: ./backend
         env_file:
+            - .env
             - ./backend/.env
         ports:
-            - "5001:5001"
+            - "${BACKEND_PORT}:${BACKEND_PORT}"
         depends_on:
             - db
             - frontend
