--- a/backend/Dockerfile.studio
+++ b/backend/Dockerfile.studio
@@ -1,9 +1,9 @@
-FROM	node:21.6.0
+FROM node:21
 
-WORKDIR	/usr/src/app
+WORKDIR /app
 
-COPY	prisma ./prisma/
+COPY prisma ./prisma/
 
-RUN		npm install prisma --save-dev 
+RUN npm install prisma --save-dev 
 
-CMD		["npx", "prisma", "studio"]
+CMD ["npx", "prisma", "studio"]
