--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,51 @@ services:
     #         - transcendence_network
     #     restart: unless-stopped
 
+
+
+    # CLEAN :
+    # image: postgres:14
+    # container_name: db
+    # env_file:
+    #     - .env
+    #     - ./backend/.env
+    # ports:
+    #     - "5432:5432"
+    # networks:
+    #     - transcendence_network
+    # restart: always
+    # volumes:
+    #     - pgdata:/var/lib/postgresql/data
+
+    # frontend:
+    #     container_name: frontend
+    #     build: ./frontend
+    #     env_file:
+    #         - .env
+    #         - ./frontend/.env
+    #     ports:
+    #         - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+    #     depends_on:
+    #         - db
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
+    
+    # backend:
+    #     container_name: backend
+    #     build: ./backend
+    #     env_file:
+    #         - .env
+    #         - ./backend/.env
+    #     ports:
+    #         - "${BACKEND_PORT}:${BACKEND_PORT}"
+    #     depends_on:
+    #         - db
+    #         - frontend
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
+
 volumes:
     pgdata:
         name: pgdata
