--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         volumes:
             - pgdata:/var/lib/postgresql/data
         env_file:
+            - .env
             - ./backend/.env
         networks:
             - transcendence_network
