--- a/backend/package.json
+++ b/backend/package.json
@@ -70,6 +70,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.1.65",
     "@swc/core": "^1.3.105",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
