--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
     db:
         image: postgres:14
         container_name: db
-        restart: always
         ports:
             - "5432:5432"
         volumes:
@@ -14,38 +13,38 @@ services:
             - ./backend/.env
         networks:
             - transcendence_network
+        restart: always
 
-    # backend:
-    #     container_name: backend
-    #     build:
-    #         context: ./backend
-    #         dockerfile: Dockerfile
-    #     env_file:
-    #         - ./backend/.env
-    #     ports:
-    #         - "5001:5001"
-    #     depends_on:
-    #         - db
-    #         - frontend
-    #     networks:
-    #         - transcendence_network
-    #     restart: unless-stopped
-
-    # frontend:
-    #     container_name: frontend
-    #     build:
-    #         context: ./frontend
-    #         dockerfile: Dockerfile
-    #     env_file:
-    #         - ./frontend/.env
-    #     ports:
-    #         - "3000:3000"
-    #     depends_on:
-    #         - db
-    #     networks:
-    #         - transcendence_network
-    #     restart: unless-stopped
+    frontend:
+        container_name: frontend
+        build: ./frontend
+        env_file:
+            - .env
+            - .env.private
+        ports:
+            - "${FRONTEND_PORT}:${FRONTEND_PORT}"
+        depends_on:
+            - db
+        networks:
+            - transcendence_network
+        restart: unless-stopped
     
+    backend:
+        container_name: backend
+        build: ./backend
+        env_file:
+            - .env
+            - ./backend/.env
+            - .env.private
+        ports:
+            - "${BACKEND_PORT}:${BACKEND_PORT}"
+        depends_on:
+            - db
+            - frontend
+        networks:
+            - transcendence_network
+        restart: unless-stopped
+
     # prisma-studio:
     #     container_name: prisma-studio
     #     build:
@@ -58,52 +57,6 @@ services:
     #     depends_on:
     #         - db
     #         - backend
-    #         - frontend
-    #     networks:
-    #         - transcendence_network
-    #     restart: unless-stopped
-
-
-
-    # CLEAN :
-    # image: postgres:14
-    # container_name: db
-    # env_file:
-    #     - .env
-    #     - ./backend/.env
-    # ports:
-    #     - "5432:5432"
-    # networks:
-    #     - transcendence_network
-    # restart: always
-    # volumes:
-    #     - pgdata:/var/lib/postgresql/data
-
-    # frontend:
-    #     container_name: frontend
-    #     build: ./frontend
-    #     env_file:
-    #         - .env
-    #         - .env.private
-    #     ports:
-    #         - "${FRONTEND_PORT}:${FRONTEND_PORT}"
-    #     depends_on:
-    #         - db
-    #     networks:
-    #         - transcendence_network
-    #     restart: unless-stopped
-    
-    # backend:
-    #     container_name: backend
-    #     build: ./backend
-    #     env_file:
-    #         - .env
-    #         - ./backend/.env
-    #         - .env.private
-    #     ports:
-    #         - "${BACKEND_PORT}:${BACKEND_PORT}"
-    #     depends_on:
-    #         - db
     #         - frontend
     #     networks:
     #         - transcendence_network
