--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.5",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
