--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,22 +45,22 @@ services:
             - transcendence_network
         restart: unless-stopped
 
-    prisma-studio:
-        container_name: prisma-studio
-        build:
-            context: ./backend
-            dockerfile: Dockerfile.studio
-        env_file:
-            - ./backend/.env
-        ports:
-            - "5555:5555"
-        depends_on:
-            - db
-            - backend
-            - frontend
-        networks:
-            - transcendence_network
-        restart: unless-stopped
+    # prisma-studio:
+    #     container_name: prisma-studio
+    #     build:
+    #         context: ./backend
+    #         dockerfile: Dockerfile.studio
+    #     env_file:
+    #         - ./backend/.env
+    #     ports:
+    #         - "5555:5555"
+    #     depends_on:
+    #         - db
+    #         - backend
+    #         - frontend
+    #     networks:
+    #         - transcendence_network
+    #     restart: unless-stopped
 
 volumes:
     pgdata:
